# twow-raid-visuals

./: Cargo.toml  README.md  make.sh
dbc/: AreaTable.dbc  SkillLineAbility.dbc  SpellVisual.dbc
includes/Spells/: ArcaneConsecration_Impact_Base_Q.m2  BAVAGROUNDARCANE.blp  DANGER01_AREA.BLP  DANGER03_AREA.BLP  DANGER03_AREA.BLP.bak  DANGER05_AREA.BLP  DANGER05_AREA.BLP.bak  Danger03_Area.m2  Danger05_Area.m2  Danger10_Area.m2  Danger20_Area.blp  Danger20_Area.m2  Danger40_Area.m2  Danger40_Area.m2.bak  DangerArea10.m2  DangerArea10White.m2  DangerArea12White.m2  DangerArea15.m2  DangerArea15White.m2  DangerArea20.m2  DangerArea30.m2  DangerArea35.m2  DangerArea40.m2  DangerArea7Red.m2  DangerAreaBlue.blp  DangerAreaFlame.blp  DangerAreaFrost.blp  DangerAreaOrange.blp  DangerAreaOrangeS.blp  DangerAreaRed.blp  DangerAreaWhite.blp  DangerAreaX.blp  DangerZone.classic.patched.m2  DangerZone_W10_S18.m2  (+53 more)
patches/: 0-ground_effects.yaml  0-sounds.yaml  1-blizzard.yaml  2-rain_of_fire.yaml  2-rain_of_fires.yaml  3-flamestrike.yaml  4-mc.yaml  4-zg-aq20.yaml  5-bwl.yaml  5-mc-bwl-es.yaml  6-aq40-naxx.yaml  6-naxx.yaml  7-kara.yaml  8-dungeons.yaml  9-misc.yaml  gnarlmoon.yaml  green_water_shield.yaml  incantagos.yaml  medivh.yaml  naxx.yaml  sound.yaml
schema/: CreatureDisplayInfo.dbc.yaml  CreatureModelData.dbc.yaml  CreatureSoundData.dbc.yaml  SoundEntries.dbc.yaml  Spell.dbc.yaml  SpellVisual.dbc.yaml  SpellVisualEffectName.dbc.yaml  SpellVisualKit.dbc.yaml  spell_colors.json
src/: dbc.rs  main.rs  patch.rs
tools/: DangerZone.m2  create_zone.py  danger-area.xcf
(+18 files in other folders)
